--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-feed": "^1.1.0",
     "hexo-generator-sitemap": "^1.1.2",
+    "hexo-pagination": "^0.1.0",
     "hexo-renderer-jade": "^0.4.1",
     "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.1",
